:sparkles: 添加 UWP 项目，完成基本的图形输出支持 #36

--- a/.gitignore
+++ b/.gitignore
@@ -244,6 +244,7 @@ ModelManifest.xml
 # Debug files
 *.dSYM/
 
+# Other
 *.db
 *.opendb
 .*
@@ -252,3 +253,9 @@ src/lib/unqlite.c
 include/sqlite3.h
 include/unqlite.h
 include/config.h
+UWP/[Aa]ssets/*.xml
+UWP/[Aa]ssets/*.css
+UWP/[Aa]ssets/*.ttf
+UWP/[Ll]ocales/
+UWP/BundleArtifacts
+vendor/
