--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="src\bridge_win32.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\dialog_password.c">
+      <Filter>源文件\ui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
