添加线程版的本地文件服务的部分实现代码

--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="src\lib\common.c" />
     <ClCompile Include="src\lib\file_cache.c" />
     <ClCompile Include="src\lib\file_search.c" />
+    <ClCompile Include="src\lib\file_service.c" />
     <ClCompile Include="src\lib\i18n.c" />
     <ClCompile Include="src\lib\sha1.c" />
     <ClCompile Include="src\lib\thumb_db.c" />
