--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="src\ui\dialog_password.c">
       <Filter>源文件\ui</Filter>
     </ClCompile>
+    <ClCompile Include="src\lib\file_service.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
