补充服务端的请求处理，调整文件流操作

--- a/LC-Finder.vcxproj
+++ b/LC-Finder.vcxproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <ClInclude Include="include\bridge.h" />
     <ClInclude Include="include\browser.h" />
+    <ClInclude Include="include\build.h" />
     <ClInclude Include="include\common.h" />
     <ClInclude Include="include\dialog.h" />
     <ClInclude Include="include\dropdown.h" />
