--- a/LC-Finder.vcxproj.filters
+++ b/LC-Finder.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="src\lib\file_service.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="src\lib\file_storage.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="LICENSE" />
@@ -190,6 +193,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="include\build.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\file_service.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\file_storage.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
